[gd_scene load_steps=2 format=3 uid="uid://kppgic7pjd4f"]

[ext_resource type="Script" path="res://Script/Questions.gd" id="1_33vki"]

[node name="quiz" type="Node2D"]

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = 36.0
offset_top = -96.53
offset_right = 1188.0
offset_bottom = 418.47
script = ExtResource("1_33vki")

[node name="Question" type="Label" parent="MarginContainer"]
layout_mode = 2
text = "Question"
horizontal_alignment = 1

[node name="Button1" type="Button" parent="MarginContainer/Question"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.275
anchor_top = 5.25
anchor_right = 0.275
anchor_bottom = 5.25
offset_left = -116.8
offset_top = -30.5
offset_right = 123.28
offset_bottom = 48.21
text = "Button 1"
text_overrun_behavior = 4

[node name="Button2" type="Button" parent="MarginContainer/Question"]
layout_mode = 0
offset_left = 715.0
offset_top = 109.0
offset_right = 955.08
offset_bottom = 187.71
text = "Button 2"
text_overrun_behavior = 4

[node name="Button3" type="Button" parent="MarginContainer/Question"]
layout_mode = 0
offset_left = 199.0
offset_top = 248.0
offset_right = 439.08
offset_bottom = 326.71
text = "Button 3"
text_overrun_behavior = 4

[node name="Button4" type="Button" parent="MarginContainer/Question"]
layout_mode = 1
anchors_preset = -1
offset_left = 713.0
offset_top = 241.0
offset_right = 953.08
offset_bottom = 319.71
text = "Button 4
"
text_overrun_behavior = 4

[node name="Timer" type="Timer" parent="MarginContainer/Question"]

[node name="Label" type="Label" parent="MarginContainer/Question"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.969
anchor_top = 19.355
anchor_right = 0.969
anchor_bottom = 19.355
offset_left = -227.288
offset_top = -89.7
offset_right = -17.288
offset_bottom = -12.7
text = "8:00"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="MarginContainer/Question/Button1" to="MarginContainer" method="_on_button_1_pressed"]
[connection signal="pressed" from="MarginContainer/Question/Button2" to="MarginContainer" method="_on_button_2_pressed"]
[connection signal="pressed" from="MarginContainer/Question/Button3" to="MarginContainer" method="_on_button_3_pressed"]
[connection signal="pressed" from="MarginContainer/Question/Button4" to="MarginContainer" method="_on_button_4_pressed"]
